<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:context=".MainActivity"
    >

    <TextView
        android:id="@+id/tvTitulo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="2dp"
        android:text="Registro de usuario"
        android:textAlignment="center"
        android:minHeight="48dp"
        android:textSize="35dp" />


    <EditText
        android:id="@+id/etDocumento"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etDocumento"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etNombres"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etNombres"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etApellidos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etApellidos"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etUsuario"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etUsuario"
        android:inputType="text"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/etContra"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/etContra"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnRegistar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:onClick="registerUser"
            android:text="@string/btnRegistrar" />

        <Button
            android:id="@+id/btnBuscar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"

            android:text="@string/btnBuscar" />
    </TableRow>

    <TableRow android:layout_width="match_parent" android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnListar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:onClick="callUserList"
            android:text="@string/btnlistarRegistros" />

        <Button
            android:id="@+id/btnLimpiar"

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"

            android:onClick="limpiar"
            android:text="@string/btnLimpiar" />
    </TableRow>

    <ListView
        android:id="@+id/lvLista"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />


</LinearLayout>